--- a/src/app/appareil/appareil.component.html
+++ b/src/app/appareil/appareil.component.html
@@ -3,6 +3,13 @@
                 'list-group-item-danger': appareilStatus === 'éteint'}">
   <div style="width:20px;height:20px;background-color:red;"
        *ngIf="appareilStatus === 'éteint'"></div>
-  <h4 [ngStyle]="{color: getColor()}">Appareil : {{ appareilName }} -- Statut : {{ getStatus() }}</h4>
+  <h4 [ngStyle]="{color: getColor()}">Appareil : {{ appareilName }} -- Statut : {{ getStatus() }}  -- Index : {{ getIndex() }} -- Toto : {{ getToto() }}</h4>
   <input type="text" class="form-control" [(ngModel)]="appareilName">
+
+   <button class="btn btn-sm btn-success"
+          *ngIf="appareilStatus === 'éteint'"
+          (click)="onSwitch()">Allumer</button>
+  <button class="btn btn-sm btn-danger"
+          *ngIf="appareilStatus === 'allumé'"
+          (click)="onSwitch()">Eteindre</button>
 </li>
