--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,20 @@
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-collapse">
+      <ul class="nav navbar-nav">
+    <li routerLinkActive="active"><a routerLink="auth">Authentification</a></li>
+    <li routerLinkActive="active"><a routerLink="appareils">Appareils</a></li>
+</ul>
+<div class="navbar-right">
+    <p>Vous êtes connecté depuis {{ secondes }} secondes !</p>
+</div>
+    </div>
+  </div>
+</nav>
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <h2>Mes appareils</h2>
-     <ul class="list-group">
-    <app-appareil  *ngFor="let appareil of appareils; let i = index"
-                   [appareilName]="appareil.name"
-                   [appareilStatus]="appareil.status" 
-                    [appareilToto]="appareil.toto"
-                   [index]="i"></app-appareil>
-</ul>
-        <button class="btn btn-success"
-             [disabled]="!isAuth"
-              (click)="onAllumer()">Tout allumer</button>
-        <button class="btn btn-danger"
-              [disabled]="!isAuth"
-              (click)="onEteindre()">Tout éteindre</button>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
