--- a/src/app/appareil/appareil.component.html
+++ b/src/app/appareil/appareil.component.html
@@ -4,6 +4,7 @@
   <div style="width:20px;height:20px;background-color:red;"
        *ngIf="appareilStatus === 'éteint'"></div>
   <h4 [ngStyle]="{color: getColor()}">Appareil : {{ appareilName }} -- Statut : {{ getStatus() }}  -- Index : {{ getIndex() }} -- Toto : {{ getToto() }}</h4>
+  <a [routerLink]="[id]">Détail</a>
   <input type="text" class="form-control" [(ngModel)]="appareilName">
 
    <button class="btn btn-sm btn-success"
