--- a/src/app/appareil-view/appareil-view.component.html
+++ b/src/app/appareil-view/appareil-view.component.html
@@ -14,3 +14,6 @@
               [disabled]="!isAuth"
               (click)="onEteindre()">Tout éteindre</button>
     </div>
+
+    <button class="btn btn-primary"
+        (click)="onFetch()">Récupérer les appareils</button>
